--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,8 +11,8 @@ android {
         applicationId "com.rezkyaulia.android.cinemapedia"
         minSdkVersion 21
         targetSdkVersion 25
-        versionCode 2
-        versionName "0.0.0.2"
+        versionCode 3
+        versionName "0.0.0.3"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes.each {
@@ -49,8 +49,11 @@ dependencies {
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'com.jakewharton.timber:timber:4.5.1'
     compile 'com.amitshekhar.android:android-networking:1.0.0'
+    compile 'com.app.infideap.stylishwidget:stylish-widget:1.3.3'
 
 
     compile 'io.reactivex:rxandroid:1.2.0'
     compile 'io.reactivex:rxjava:1.1.8'
+    compile 'com.scottyab:secure-preferences-lib:0.1.4'
+
 }
